--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+.image-bar {
+    margin-right: 10px; padding: 0; width: 200px; height: 200px; border-bottom-left-radius:20px;border-bottom-right-radius:20px;
+}
+.navbar-default {
+    background-color: #171212;
+    border-color: #e7e7e7;
+}
 .navbar-brand {
   padding: 0px;
 }
