--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+.navbar-brand {
+  padding: 0px;
+}
+.navbar-brand>img {
+  height: 100%;
+  padding: 15px;
+  width: auto;
+}
+
 .col-md-3,.col-md-4 {
     position: relative;
     min-height: 1px;
