--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,53 @@
-.navbar-brand {
-  padding: 0px;
+
+body {
+  padding-top: 50px;
 }
+
+nav a {
+  padding-top: 20px !important;
+  padding-bottom: 20px !important;
+  font-size: 18px;
+}
+
+nav .navbar-toggle {
+  margin: 13px 15px 13px 0;
+}
+
 .navbar-brand>img {
-  height: 100%;
-  padding: 15px;
-  width: auto;
+    position: fixed;
+
+}
+
+
+header {
+  /*background: #f5b335;*/
+  height: 40px;
+  position: fixed;
+  top: 0;
+  transition: top 0.2s ease-in-out;
+  width: 100%;
+}
+nav.navbar.shrink {
+  min-height: 35px;
+}
+
+nav.shrink a {
+  padding-top: 10px !important;
+  padding-bottom: 10px !important;
+  font-size: 15px;
+}
+
+nav.shrink .navbar-brand>img {
+    display: none;
+}
+
+nav.shrink .navbar-toggle {
+  padding: 4px 5px;
+  margin: 8px 15px 8px 0;
+}
+.fixed-tops {
+    right: 0;
+    left: 0;
 }
 
 .col-md-3,.col-md-4 {
